
2006-08-07  Florian Boor  <florian.boor@kernelconcepts.de>

    * export-vcal.c (export_event_as_vevent): Revert last change, fixed
      libmimedir.

2006-08-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * export-vcal.c (export_event_as_vevent): Do not set "sequence", 
      libmimedir does not allow this.
    * main.c (handoff_callback), (main): Allow flushing via handoff.

2006-07-31  Florian Boor  <florian.boor@kernelconcepts.de>

    * event-ui.c (note_time_change), (build_recurrence_page), (new_event):
      Adjust months.
    * event-ui.c (click_ok), (datesel_changed): Adjust month to avoid beeing 
      one month ahead.

2006-07-27  Florian Boor  <florian.boor@kernelconcepts.de>

    * (build_edit_event_window): Fix typo.
    * event-ui.c (toplevel): Declare GtkWidget* istead of GtkSpinButton*.
    * (build_recurrence_page): Don't cast number editors.

2006-07-27  Florian Boor  <florian.boor@kernelconcepts.de>

    * Event editor rework for maemo:
    event-ui.c (toplevel): Add hildon widget includes.
    (click_ok): Use hildon editor widgets for maemo.
    (note_time_change): Two versions maemo/gtk.
    (set_toggle_focus): Likewise.
    (build_detail_page): Use GPE boxspacing instead of constants.
    (build_alarm_page): Likewise.
    (build_alarm_page): Use hildon editor widgets for maemo.
    (build_recurrence_page): Use GPE boxspacing and hildon widgets. Drop frame 
    label, looks better and is not that important.
    (build_edit_event_window): GPE boxspacings and initialize variable to
    get rid of compiler warning. Use hildon widgets.  Some minor packaging
    and alignment changes.
    (new_event): Round minutes to full 15. use hildon widgets.
    
2006-07-26  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c (main): Menu layout improvements (Maemo).
    * main.c, export-vcal.c: (save_to_file), (export_list_to_file), 
    (list_calendars): Fix some == vs. != issues.